2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change version to 2.0.91.
	* NEWS: Likewise.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change version to 2.0.90.
	* NEWS: Add entries for 2.0.90.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Remove unused variable.

2022-02-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (libpoke_la_SOURCES): Add
	pkl-gen-attrs.{pks,pkc}.
	(MOSTLYCLEANFILES): Add pkl-gen-attrs.pkc.tmp.
	(BUILT_SOURCES): Add pkl-gen-attrs.pkc.
	* libpoke/pkl-gen-attrs.pks: New file.
	* libpoke/pkl-gen.c: Include pkl-gen-attrs.pkc.
	(pkl_gen_ps_op_attr): Use RAS macros.
	* testsuite/poke.pkl/attr-size-22.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-02-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_ps_op_attr): Dereference node
	property after making sure it's valid.

2022-02-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_ps_op_attr): Dereference node
	property after making sure it's valid.
	* testsuite/poke.pkl/adda-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-02-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.c (pvm_run): exit_exception is mandatory.
	* libpoke/pvm.h: Reflect this in docstring.
	* poke/pk-map.c (pk_map_load_parsed_map): Pass exit_exception to
	pk_compile_buffer and pk_compile_expression.
	* poke/pk-mi.c (pk_mi_dispatch_msg): Likewise.
	* libpoke/pkl.c (pkl_execute_statement): Do not replace the
	compiler's environment if executing the code resulted in an
	unhandled exception.
	(pkl_execute_buffer): Likewise.
	(pkl_execute_file): Likewise.
	(pkl_execute_expression): Likewise.
	(pkl_load_rt): Pass exit_exception to pkl_execute_file.
	(LOAD_STD): Likewise.
	(pkl_load): Likewise.
	* libpoke/libpoke.c (pk_call): Likewise.
	* testsuite/poke.libpoke/foreign-iod.c (main): Likewise.
	(TEST_IO): Likewise.