@@ -1,5 +1,9 @@
 2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* Makefile.am (AM_DISTCHECK_CONFIGURE_FLAGS): Remove.
+
+2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* configure.ac: Change version to 2.0.91.
 	* NEWS: Likewise.
 
